# triattention

./: .geminiignore  .gitignore  .gitmodules  .qwenignore  AGENTS.md  CLAUDE.md  DEMO_RELEASE_EXECUTION_TODO.md  HANDOFF_DEMO_TOOL_STREAMING_2026-03-13.md  LINXI_DEV_SYNC_STATUS.md  README.md  TRIATTENTION_HANDOFF_STATUS_2026-03-08.md  TRIATTENTION_V2_INTERFACE_SWITCH.md  TRIATTENTION_VLLM_USAGE.md  TRIATTN_RECLAIM_BROADCAST_FIX_HANDOFF_2026-03-10.md  prompt.txt  setup.py
TriAttention_vLLM/: .gitignore  REVIEW_AND_PLAN.md  pyproject.toml  test_compression_fix_minimal.py  test_vllm_compression_intervals.py  trivllm_environment.yml  verify_fix.sh
TriAttention_vLLM/benchmarks/: __init__.py
TriAttention_vLLM/docs/: DOCS_STANDARDS.md  KV_CACHE_LAYOUT_ANALYSIS.md  README.md  TODO.md
TriAttention_vLLM/evaluation/: README.md  __init__.py
TriAttention_vLLM/examples/: basic_usage.py  example_backend_usage.py
TriAttention_vLLM/legacy_backup/: README.md
TriAttention_vLLM/linxi_dev/: run_vllm_serve.sh  run_vllm_triattention.sh  swap_backend.sh
TriAttention_vLLM/stats/: loader.py
TriAttention_vLLM/test/: VERIFICATION_SUMMARY.md  debug_attention_structure.py  debug_forward_signature.py  debug_rkv_equivalence.py  run_tests.sh  test_backend_structure.py  test_compression_trigger.py  test_compression_with_reshape.py  test_optimization_equivalence.py  test_scoring_correctness.py  test_vllm_hook.py  verify_state_issue.py
TriAttention_vLLM/tests_runtime/: run_lite_gate.py  run_smoke.py  test_compressor_rope_init.py  test_config.py  test_dispatch_sharding.py  test_executor.py  (+28 more)
(+1582 files in other folders)
