[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triattention"
version = "0.1.0"
description = "TriAttention KV Cache Compression for vLLM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "triton",
]

[project.entry-points."vllm.general_plugins"]
triattention = "triattention.plugin:register_triattention_backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["triattention*"]

[tool.setuptools.package-data]
triattention = ["*.py"]
